deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-landing-service
  namespace: ichiban
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
      protocol: TCP
  selector:
    app: console-landing-service
    component: ichiban
